--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Incluye la biblioteca jsPDF para generar PDFs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <!-- Font Awesome para el ícono de la cámara -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body class="p-4 md:p-8">
 
@@ -32,6 +34,11 @@
                 Subir Foto
             </label>
             <input type="file" id="uploadInput" accept="image/*" class="hidden">
+            
+            <!-- Nuevo botón para cambiar de cámara -->
+            <button id="switchCameraButton" class="bg-yellow-500 text-white font-bold py-3 px-6 rounded-xl shadow-md hover:bg-yellow-600 transition duration-300 w-full md:w-auto">
+                <i class="fas fa-sync-alt mr-2"></i>Cambiar Cámara
+            </button>
             
             <input type="text" id="descriptionInput" placeholder="Descripción del producto..." class="flex-1 p-3 border border-gray-300 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-300">
             <button id="addProductButton" class="bg-green-600 text-white font-bold py-3 px-6 rounded-xl shadow-md hover:bg-green-700 transition duration-300 w-full md:w-auto">
